--- a/style.css
+++ b/style.css
@@ -392,11 +392,12 @@ justify-content: space-evenly;
       justify-content: space-between;
       width: 81.5rem;
       height: 21.8rem;
+      padding-left: 3rem;
   }
   
   .feature-box1{
   /* border: 2px solid black; */
-  width: 39.6rem;
+  width: 37.6rem;
   height: 9rem;
   border-radius: 8px;
   background-color: white;
@@ -406,7 +407,7 @@ justify-content: space-evenly;
   }
   .feature-box2{
   /* border: 2px solid black; */
-  width: 39.6rem;
+  width: 37.6rem;
   height: 9rem;
   border-radius: 8px;
   background-color: white;
@@ -416,7 +417,7 @@ justify-content: space-evenly;
   }
   .feature-box3{
   /* border: 2px solid black; */
-  width: 39.6rem;
+  width: 37.6rem;
   height: 9rem;
   border-radius: 8px;
   background-color: white;
@@ -427,7 +428,7 @@ justify-content: space-evenly;
   }
   .feature-box4{
   /* border: 2px solid black; */
-  width: 39.6rem;
+  width: 37.6rem;
   height: 9rem;
   border-radius: 8px;
   background-color: white;
@@ -503,6 +504,7 @@ justify-content: space-evenly;
               flex-wrap: none;
               justify-content: space-evenly;
              align-items: center;
+             padding-left: 0;
           }
           .box-feature{
               height: 10rem;
@@ -578,7 +580,7 @@ justify-content: space-evenly;
 margin-bottom: 5rem;
 }
 #director{
-width:25rem;
+width:18rem;
 height:40rem;
 background-color: #e2ddf5ff;
 
@@ -588,7 +590,7 @@ border-radius: 10px;
 box-shadow: 0 4px 8px rgb(24, 9, 68);
 }
 .card{
-width:25rem;
+width:18rem;
 height:40rem;
 background-color: #e2ddf5ff;
 
@@ -607,7 +609,7 @@ margin-top: 12px;
 padding: 0 2px 0 2px;
 }
 img{
-width: 25rem;
+width: 18rem;
 height: 27rem;
 border-radius: 10px
 }
